fix spacing for settings

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -1169,7 +1169,8 @@ svg {
       .settings__change-theme {
         margin: 2rem auto; } }
     .settings__change-theme__header {
-      font-size: 2.4rem; }
+      font-size: 2.4rem;
+      padding-bottom: .5rem; }
     .settings__change-theme__drop-down {
       width: 15rem;
       padding: .5rem 1rem;
@@ -1186,13 +1187,15 @@ svg {
       width: 100%; }
     .settings__change-password__form div .form-error {
       text-align: left;
-      margin-left: 2.5rem; }
+      margin-left: 2.5rem;
+      padding-top: .8rem; }
     .settings__change-password__header {
       font-size: 2.4rem; }
     .settings__change-password__label {
       font-size: 1.2rem;
       font-weight: 700;
-      margin-top: .7rem;
+      margin-top: 1rem;
+      margin-bottom: 1rem;
       text-align: left;
       margin-left: 2.5rem;
       display: block; }
@@ -1210,5 +1213,7 @@ svg {
       outline: none; }
     .settings__change-password__button {
       display: block;
-      margin: 2rem auto;
-      color: #3c48a0; }
+      margin: 3.5rem auto;
+      color: #7FB3D5;
+      background-color: white;
+      border: 1px solid #7FB3D5; }
